--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@rbxts/memorymachine",
+  "name": "@lock-studio-games/memorymachine",
   "version": "1.0.0",
   "description": "",
   "main": "out/init.lua",
